--- a/aksi.html
+++ b/aksi.html
@@ -75,11 +75,12 @@
   </nav>
 
     <div class="container pt-5"style="margin-top:50px">
-      <div id="aksi">
-        <h3>Tanpa Aksi, Tidak Ada Perubahan</h3>
+      <div id="aksi" class="d-flex flex-column justify-content-center p-3 align-items-center ">
+        <h2>Tanpa Aksi, Tidak Ada Perubahan</h2>
         <p class="mb-4">Ayo Bergabung dan Beraksi untuk Masa Depan Bumi yang Lebih Baik!</p>
-        <hr>
+        
       </div>
+      <hr>
     </div>
     <div class="container">
       <div class="row" id="aksi-list">
