--- a/login.html
+++ b/login.html
@@ -73,7 +73,18 @@
     </nav>
 
     <div class="container">
-      <h1 class="text-center mt-5 mb-5">ISI KONTEN NYA</h1>
+      <h1>Login</h1>
+      <form id="login-form">
+        <div class="form-group">
+          <label for="username">Username:</label>
+          <input type="text" id="username" name="username" class="form-control" required>
+        </div>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" class="form-control" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Login</button>
+      </form>
     </div>
 
     <!-- Footer -->
@@ -144,5 +155,6 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+    <script src="./assets/js/login.js.js"></script>
   </body>
 </html>
