slicing ui artikel terkait & komentar

--- a/detailArticle.html
+++ b/detailArticle.html
@@ -110,6 +110,93 @@
     </div>
   </div>
 
+  <!-- Artikel terkait -->
+  <div class="container p-5" >
+    <div class="artikel" id="artikel" >
+      <h3 class="text-start mb-3">Artikel Terkait</h3>
+      <div style="border: 0.5px solid #BFBFBF"></div>
+      <div class="row pt-4" id="articlesContent">
+        <div class="col-sm-4 mb-3 pt-4">
+          <div class="card card-artikel" >
+              <img src="https://www.linkpicture.com/q/8c133b2d-gp1swig8-510x340_1.jpg" class="card-img-top" alt="artikel">
+              <div class="card-body">
+                  <a class="wrapperLinkTitleArticles" href="#">
+                      <h5 class="card-title"> Rekomendasi Buku Isu Lingkungan untuk Ngabuburead</h5>
+                  </a>
+                  <p class="card-text" style="color: #595959; text-align: justify;">Belajar dan mendalami isu lingkungan gak melulu harus dimulai dengan bacaan yang berat, kok! Berikut daftar tujuh buku tentang isu lingkungan rekomendasi kami.</p>
+                  <p class="fw-bold" style="color: #6F7376;">
+                      <span class="author">Sherina Redjo</span> <span id="dot2"></span>
+                      <span class="date">18 April 2023</span>
+                  </p>
+              </div>
+          </div>
+        </div>
+      </div>
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+
+  <!-- Komentar -->
+  <div class="container p-5" >
+    <div class="komentar" id="komentar" >
+      <h3 class="text-start mb-3">Komentar</h3>
+      <div style="border: 0.5px solid #BFBFBF"></div>
+      <form>
+        <div class="row pt-5">
+          <div class="col-lg-8 col-md-8 col-sm-12 field">
+            <div class="input-group mb-3">
+              <input type="email" id="email-value" class="form-control form-control-md me-2" placeholder="Masukkan Alamat Email" required>
+              <input type="text" id="name-value" class="form-control form-control-md" placeholder="Masukkan Nama" required>
+            </div>
+            <div class="input-group mb-3">
+                <textarea id="komentar-value" class="form-control form-control-md" placeholder="Tulis Komentar" style="height: 150px; resize: none" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Add Comment</button>
+          </div>
+        </div>
+      </form>
+    </div>
+
+    <div class="row pt-4">
+      <div class="posts-list">
+        <div class="card bg-light mt-4" style="width: 50rem;">
+          <div class="card-body">
+            <h5 class="card-title">Lalalisa</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">09.00 PM <span id="dot2"></span> <span> lala@gmail.com</span></h6>
+            <p class="card-text text-dark">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <!-- <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a> -->
+          </div>
+        </div>
+        <div class="card bg-light mt-4" style="width: 50rem;">
+          <div class="card-body">
+            <h5 class="card-title">Lalalisa</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">09.00 PM <span id="dot2"></span> <span> lala@gmail.com</span></h6>
+            <p class="card-text text-dark">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <!-- <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a> -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Footer -->
   <footer id="footer">
     <div class="container">
