--- a/detailAksi.html
+++ b/detailAksi.html
@@ -22,7 +22,7 @@
 
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg">
+  <nav class="navbar bg-white navbar-expand-lg d-flex flex-column justify-content-between shadow fixed-top">
     <div class="container d-flex justify-content-between">
       <a class="navbar-brand" href="#"><img src="./assets/images/logo.png" id="logo" alt="Environthink Logo" /></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -52,7 +52,7 @@
     </div>
   </nav>
 
-  <div class="container">
+  <div class="container "style="margin-top:100px">
     <div class="row">
       <div class="col-md-8">
         <div id="aksi">
