--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </nav>
 
     <!-- Highlight 1 -->
-    <div class="wrapperHighlight">
+    <!-- <div class="wrapperHighlight">
       <div class="container">
         <div class="wrapperHighlight1Content ms-2 me-2">
           <h1 class="titleHighlight1 text-white">
@@ -86,7 +86,7 @@
           <div class="btnHighlight1 btn mb-5">Ikuti Aksi</div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Judul Title Article -->
     <div
