--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </nav>
 
     <!-- Highlight 1 -->
-    <!-- <div class="wrapperHighlight">
+    <div class="wrapperHighlight">
       <div class="container">
         <div class="wrapperHighlight1Content ms-2 me-2">
           <h1 class="titleHighlight1 text-white">
@@ -86,7 +86,7 @@
           <div class="btnHighlight1 btn mb-5">Ikuti Aksi</div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- Judul Title Article -->
     <div
@@ -97,33 +97,7 @@
     </div>
 
     <!-- Konten -->
-    <div id="articlesContent" class="container mt-5">
-      <!-- <div class="row ms-1 me-1 mt-5 mb-5">
-        <div class="col-md-4 p-0 me-4">
-          <img
-            class="articlesImage"
-            src="https://www.greenpeace.org/static/planet4-indonesia-stateless/2023/04/57322f08-lebaran_timbulsloko_2023_aji-styawan-greenpeace-9-1024x683.jpg"
-            alt=""
-          />
-        </div>
-        <div id="detailPreviewArticles" class="col-md-5 ps-0 pe-0">
-          <p class="hashTag m-0 p-0">
-            <span id="category">Cerita</span> <span id="dot"></span>
-            <span id="hashTagArticle">#Iklim &nbsp; #Hutan</span>
-          </p>
-          <a class="wrapperLinkTitleArticles" href="#">
-            <h4 class="titleArticles">Lebaran di Desa yang Tenggelam</h4>
-          </a>
-          <p class="descArticles text-dark">
-            Merayakan Idulfitri di desa yang terdampak krisis iklim.
-          </p>
-          <p class="text-dark">
-            <span id="authorArticle"> Greenpeace Indonesia</span>
-            <span id="dot2"></span> <span id="dateArticle">26 April 2023</span>
-          </p>
-        </div>
-      </div> -->
-    </div>
+    <div id="articlesContent" class="container mt-5"></div>
 
     <div class="wrapperBtnArtikelLainnya">
       <div class="container">
