--- a/index.html
+++ b/index.html
@@ -49,13 +49,15 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Aksi</a>
+              <a class="nav-link active" href="./aksi.html">Aksi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Artikel</a>
+              <a class="nav-link active" href="./article.html">Artikel</a>
             </li>
             <li class="nav-item mt-1 mb-2 ms-3 me-4">
               <a class="" href="#"
