--- a/article.html
+++ b/article.html
@@ -55,7 +55,7 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="#">Aksi</a>
+                <a class="nav-link active" href="aksi.html">Aksi</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active" href="article.html">Artikel</a>
