--- a/detailAksi.html
+++ b/detailAksi.html
@@ -33,13 +33,13 @@
       <div class="justify-content-end collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#">Aksi</a>
+            <a class="nav-link active" href="aksi.html">Aksi</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#">Artikel</a>
+            <a class="nav-link active" href="article.html">Artikel</a>
           </li>
           <li class="nav-item mt-1 mb-2 ms-3 me-4">
             <a class="" href="#"><i id="searchIcon" class="bi bi-search fs-5 text-dark"></i></a>
