--- a/detailArticle.html
+++ b/detailArticle.html
@@ -56,7 +56,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Aksi</a>
+              <a class="nav-link active" href="aksi.html">Aksi</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="article.html">Artikel</a>
