post komentar to api

--- a/detailArticle.html
+++ b/detailArticle.html
@@ -88,7 +88,7 @@
           <p class="text-dark">
             By <span id="author" class="fw-bold"></span>
             <i class="bi bi-clock ms-1 me-1"></i>
-            <span id="date"></span>
+            <span id="date" class="fw-bold" style="color: #6F7376;"></span>
           </p>
         </div>
         <div class="col-md-12 p-0 me-4 text-center">
@@ -166,77 +166,46 @@
     </div>
 
     <!-- Komentar -->
-    <div class="container p-5">
-      <div class="komentar" id="komentar">
-        <h3 class="text-start mb-3">Komentar</h3>
-        <div style="border: 0.5px solid #bfbfbf"></div>
-        <form>
-          <div class="row pt-5">
-            <div class="col-lg-8 col-md-8 col-sm-12 field">
-              <div class="input-group mb-3">
-                <input
-                  type="email"
-                  id="email-value"
-                  class="form-control form-control-md me-2"
-                  placeholder="Masukkan Alamat Email"
-                  required
-                />
-                <input
-                  type="text"
-                  id="name-value"
-                  class="form-control form-control-md"
-                  placeholder="Masukkan Nama"
-                  required
-                />
-              </div>
-              <div class="input-group mb-3">
-                <textarea
-                  id="komentar-value"
-                  class="form-control form-control-md"
-                  placeholder="Tulis Komentar"
-                  style="height: 150px; resize: none"
-                  required
-                ></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Add Comment</button>
+  <div class="container p-5" >
+    <div class="komentar" id="komentar" >
+      <h3 class="text-start mb-3">Komentar</h3>
+      <div style="border: 0.5px solid #BFBFBF"></div>
+      <form class="add-post-form">
+        <div class="row pt-5">
+          <div class="col-lg-8 col-md-8 col-sm-12 field">
+            <div class="input-group mb-3">
+              <input type="email" id="email-value" class="form-control form-control-md me-2" placeholder="Masukkan Alamat Email" required>
+              <input type="text" id="name-value" class="form-control form-control-md" placeholder="Masukkan Nama" required>
             </div>
-          </div>
-        </form>
-      </div>
-
-      <div class="row pt-4">
-        <div class="posts-list">
-          <div class="card bg-light mt-4" style="width: 50rem">
-            <div class="card-body">
-              <h5 class="card-title">Lalalisa</h5>
-              <h6 class="card-subtitle mb-2 text-body-secondary">
-                09.00 PM <span id="dot2"></span> <span> lala@gmail.com</span>
-              </h6>
-              <p class="card-text text-dark">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <!-- <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a> -->
+            <div class="input-group mb-3">
+                <textarea id="komentar-value" class="form-control form-control-md" placeholder="Tulis Komentar" style="height: 150px; resize: none" required></textarea>
             </div>
-          </div>
-          <div class="card bg-light mt-4" style="width: 50rem">
-            <div class="card-body">
-              <h5 class="card-title">Lalalisa</h5>
-              <h6 class="card-subtitle mb-2 text-body-secondary">
-                09.00 PM <span id="dot2"></span> <span> lala@gmail.com</span>
-              </h6>
-              <p class="card-text text-dark">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <!-- <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a> -->
-            </div>
+            <button type="submit" class="btn btn-primary">Add Comment</button>
           </div>
         </div>
+      </form>
+    </div>
+
+    <div class="row pt-4">
+      <div class="posts-list" id="posts-list">
       </div>
     </div>
+  </div>
+
+  <!-- modal komentar berhasil  -->
+  <div class="modal fade" id="modal-komentar" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog  modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-body">
+          <center>
+          <img src="https://i.ibb.co/MfRWmMT/5610944.png" class="m-2" width="100px" alt="" srcset="">
+        </center>
+         <h4 class="text-center"> Menambahkan komentar</h4>
+        </div>
+     
+      </div>
+    </div>
+  </div>
 
     <!-- Footer -->
     <footer id="footer">
