--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html"
+              <a class="nav-link active" aria-current="page" href="index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./aksi.html">Aksi</a>
+              <a class="nav-link active" href="aksi.html">Aksi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./article.html">Artikel</a>
+              <a class="nav-link active" href="article.html">Artikel</a>
             </li>
             <li class="nav-item mt-1 mb-2 ms-3 me-4">
               <a class="" href="#"
@@ -101,11 +101,11 @@
     </div>
 
     <!-- Konten -->
-    <div id="articlesContent" class="container mt-5"></div>
-
-    <div class="wrapperBtnArtikelLainnya">
-      <div class="container">
-        <button class="btnArtikelLainnya btn ps-4 pe-4">Artikel Lainnya</button>
+    <div class="container">
+      <div class="articlesContent" id="articlesContent">
+      </div>
+      <div class="d-flex justify-content-start ms-1">
+        <button class="btn btn-outline-success" id="artikel-lainnya">Artikel Lainnya</button>
       </div>
     </div>
 
