fixed banner responsif

--- a/article.html
+++ b/article.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg d-flex flex-column justify-content-between shadow fixed-top" >
+<nav class="navbar navbar-expand-lg d-flex flex-column justify-content-between shadow fixed-top bg-white" >
     <div class="container">
         <a class="navbar-brand" href="#"
             ><img
