--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
-      <div class="container d-flex justify-content-between">
+    <nav class="navbar navbar-expand-lg d-flex flex-column justify-content-between shadow sticky-top bg-white">
+      <div class="container">
         <a class="navbar-brand" href="#"
           ><img
             src="./assets/images/logo.png"
@@ -74,10 +74,8 @@
       </div>
     </nav>
 
-    <section></section>
-
     <!-- Highlight 1 -->
-    <div class="wrapperHighlight">
+    <!-- <div class="wrapperHighlight pt-5">
       <div class="container">
         <div class="wrapperHighlight1Content ms-2 me-2">
           <h1 class="titleHighlight1 text-white">
@@ -87,7 +85,20 @@
             Jangan tunggu sampai terlambat, mari kita bertindak sekarang untuk
             menyelamatkan planet kita.
           </p>
-          <div class="btnHighlight1 btn mb-5" >Ikuti Aksi</div>
+          <a class="btn btnHighlight1 mb-5" href="aksi.html">Ikuti Aksi</a>
+        </div>
+      </div>
+    </div> -->
+
+    <div class="container-fluid banner">
+      <div class="container banner-content col-lg-9">
+        <div>
+          <h1 class="titleHighlight1 text-white">
+            Satu langkah kecil untuk lingkungan, satu <br> lompatan besar untuk bumi
+          </h1>
+          <p class="subTitleHighlight1 mt-4 mb-4 fw-bold fs-5">Jangan tunggu sampai terlambat, mari kita bertindak <br>sekarang untuk
+            menyelamatkan planet kita.</p>
+          <a class="btn btnHighlight1 mb-5" href="aksi.html">Ikuti Aksi</a>
         </div>
       </div>
     </div>
