--- a/article.html
+++ b/article.html
@@ -83,7 +83,7 @@
         <div class="row pt-4" id="articlesContent"></div>
       </div>
       <div class="d-flex justify-content-center">
-        <button class="btn btn-outline-success" id="artikel-lainnya">
+        <button class="btn btn-outline-success" id="artikel-lainny">
           Artikel Lainnya
         </button>
       </div>
