--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg d-flex flex-column justify-content-between shadow sticky-top bg-white">
+    <nav
+      class="navbar navbar-expand-lg d-flex flex-column justify-content-between shadow sticky-top bg-white"
+    >
       <div class="container">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="./index.html"
           ><img
             src="./assets/images/logo.png"
             id="logo"
@@ -49,7 +51,7 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link active" aria-current="page" href="./index.html"
                 >Home</a
               >
             </li>
@@ -60,7 +62,7 @@
               <a class="nav-link active" href="article.html">Artikel</a>
             </li>
             <li class="nav-item mt-1 mb-2 ms-3 me-4">
-              <a class="" href="#"
+              <a class="" href="./searchPage.html"
                 ><i id="searchIcon" class="bi bi-search fs-5 text-dark"></i
               ></a>
             </li>
@@ -94,10 +96,13 @@
       <div class="container banner-content col-lg-9">
         <div>
           <h1 class="titleHighlight1 text-white">
-            Satu langkah kecil untuk lingkungan, satu <br> lompatan besar untuk bumi
+            Satu langkah kecil untuk lingkungan, satu <br />
+            lompatan besar untuk bumi
           </h1>
-          <p class="subTitleHighlight1 mt-4 mb-4 fw-bold fs-5">Jangan tunggu sampai terlambat, mari kita bertindak <br>sekarang untuk
-            menyelamatkan planet kita.</p>
+          <p class="subTitleHighlight1 mt-4 mb-4 fw-bold fs-5">
+            Jangan tunggu sampai terlambat, mari kita bertindak <br />sekarang
+            untuk menyelamatkan planet kita.
+          </p>
           <a class="btn btnHighlight1 mb-5" href="aksi.html">Ikuti Aksi</a>
         </div>
       </div>
@@ -113,10 +118,11 @@
 
     <!-- Konten -->
     <div class="container">
-      <div class="articlesContent" id="articlesContent">
-      </div>
+      <div class="articlesContent" id="articlesContent"></div>
       <div class="d-flex justify-content-start ms-1">
-        <button class="btn btn-outline-success" id="artikel-lainnya">Artikel Lainnya</button>
+        <button class="btn btn-outline-success" id="artikel-lainnya">
+          Artikel Lainnya
+        </button>
       </div>
     </div>
 
