--- a/article.html
+++ b/article.html
@@ -62,7 +62,7 @@
               <a class="nav-link active" href="article.html">Artikel</a>
             </li>
             <li class="nav-item mt-1 mb-2 ms-3 me-4">
-              <a class="" href="#"
+              <a class="" href="./searchPage.html"
                 ><i id="searchIcon" class="bi bi-search fs-5 text-dark"></i
               ></a>
             </li>
